--- a/RestClassApplication/src/main/resources/application.properties
+++ b/RestClassApplication/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=RestClassApplication
+################### DataSource Configuration ##########################
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_database?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Root@123
+ 
+################### Hibernate Configuration ##########################
+ 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+server.port = 1235
